Fixing sync button alignment

--- a/frontend/src/pages/shows/RequestDashboard.css
+++ b/frontend/src/pages/shows/RequestDashboard.css
@@ -1,5 +1,7 @@
 #syncButton {
+    display: inline-flex;
+    align-items: center;
+    justify-content: center;
     margin: 25px;
     height: 20px;
-    align-content: center;
 }
